[metadata]
name = pywmtemp
summary = Window Maker dockapp for monitoring resources
description_file = README.rst
author = Roman Dobosz
author_email = gryf73@gmail.com
home_page = https://github.com/gryf/pywmtemp
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Networking

[install]
record = install.log

[options.entry_points]
console_scripts =
    pywmtemp = pywmtemp.pywmtemp:main

[options]
install_requires =
    wmdocklib
    pyyaml
    psutil

[bdist_wheel]
universal = 1
